<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ronaker.app.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/touch"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessLeaf" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/next_button"

            app:layout_constraintTop_toBottomOf="@id/touch">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:gravity="start"
                    android:text="@string/title_welcome_back"
                    android:textAppearance="@style/TextAppearance.Heading.1"
                    android:textColor="@color/colorTextLight"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.ronaker.app.utils.view.InputComponent
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_default"

                    android:layout_marginTop="40dp"
                    app:inputMutableText="@{viewModel.getUserEmailName()}"

                    android:layout_marginRight="@dimen/margin_default"
                    android:autofillHints="emailAddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    app:input_hint="@string/email_hint"
                    app:input_regex="^\\w+([-+.']\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$"
                    app:input_title="@string/email"
                    app:input_transparent="true"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    tools:ignore="UnusedAttribute" />


                <EditText
                    android:id="@+id/robo_email"
                    android:layout_width="0dp"
                    android:layout_height="0dp"

                    android:autofillHints="emailAddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    app:input_hint="@string/email_hint"
                    android:background="@color/colorPrimary"

                    android:textColor="@color/colorTextLight"
                    android:textColorHint="@color/white"

                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/email_input"
                    app:layout_constraintLeft_toLeftOf="@id/email_input"
                    app:layout_constraintRight_toRightOf="@id/email_input"
                    app:layout_constraintTop_toTopOf="@id/email_input" />

                <com.ronaker.app.utils.view.InputComponent
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"


                    android:layout_height="wrap_content"

                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:autofillHints="password"

                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    app:input_hint="@string/password_hint"
                    app:input_regex="^.{6,}$"

                    app:input_title="@string/password_title"
                    app:input_transparent="true"
                    app:layout_constraintTop_toBottomOf="@id/email_input"
                    tools:ignore="UnusedAttribute" />

                <EditText
                    android:id="@+id/robo_pass"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autofillHints="password"
                    android:background="@color/colorPrimary"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextLight"
                    android:textColorHint="@color/white"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/password_input"
                    app:layout_constraintLeft_toLeftOf="@id/password_input"
                    app:layout_constraintRight_toRightOf="@id/password_input"
                    app:layout_constraintTop_toTopOf="@id/password_input" />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onClickGotoForget()}"
                    android:padding="6dp"
                    android:text="@string/text_forget_password"
                    android:textAppearance="@style/TextAppearance.Medium.Regular"
                    android:textColor="@color/colorTextLight"
                    app:layout_constraintStart_toStartOf="@id/password_input"
                    app:layout_constraintTop_toBottomOf="@id/password_input" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.ronaker.app.utils.view.ButtonComponent
            android:id="@+id/next_button"
            style="@style/Button.accent"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:onClick="@{()->viewModel.onClickLoginSignIn(emailInput.getText().toString(),emailInput.checkValid(),passwordInput.getText().toString(),passwordInput.checkValid())}"
            android:text="@string/titile_button_login_to_your_account"


            app:buttonType="Text"
            app:layout_constraintBottom_toTopOf="@id/goto_sign_up"
            app:layout_constraintRight_toRightOf="parent"
            app:mutableButtonLoading="@{viewModel.getLoadingButton()}" />


        <com.ronaker.app.utils.view.ButtonComponent
            android:id="@+id/robo_button"
            style="@style/Button.accent"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:onClick="@{()->viewModel.onClickLoginSignIn(roboEmail.getText().toString(),true,roboPass.getText().toString(),true)}"
            android:text="@string/titile_button_login_to_your_account"
            android:visibility="gone"


            app:buttonType="Text"
            app:layout_constraintBottom_toTopOf="@id/goto_sign_up"
            app:layout_constraintRight_toRightOf="parent"
            app:mutableButtonLoading="@{viewModel.getLoadingButton()}" />


        <LinearLayout
            android:id="@+id/goto_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:clickable="true"

            android:focusable="true"

            android:onClick="@{()->viewModel.onClickGotoSignUp()}"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_new_to_ronaker"
                android:textAppearance="@style/TextAppearance.Medium.Regular"
                android:textColor="@color/colorTextLight" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_sign_up"
                android:textAppearance="@style/TextAppearance.Medium.SB"
                android:textColor="@color/colorTextLight" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>