...
    <string name="first_name_title">First name</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_title">Last name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="title_menu_explore">Explore</string>
    <string name="title_menu_orders">Orders</string>
    <string name="title_menu_items">Items</string>
    <string name="title_menu_inbox">Inbox</string>
    <string name="title_menu_profile">Profile</string>
    <string name="title_button_set_dates">Set dates</string>
    <string name="title_search_here">Search here …</string>
    <string name="title_button_check_out">Check out</string>
    <string name="title_your_inbox">Your inbox</string>
    <string name="title_what_s_your_email_address">What’s your email address?</string>
    <string name="title_button_create_account">Create account</string>
    <string name="titile_button_login">Login</string>
    <string name="title_and_what_s_your_name">And what’s your name?</string>
    <string name="title_done_njust_choice_a_password">Just choose a password.</string>
    <string name="title_button_done">Done!</string>
    <string name="title_welcome_back">Welcome back.</string>
    <string name="titile_button_login_to_your_account">Login to your account</string>
    <string name="title_is_item_available">Is the item available?</string>
    <string name="title_active">Active</string>
    <string name="title_name_and_description">Name and description</string>
    <string name="title_images_gallery">Images gallery</string>
    <string name="title_asking_price">Asking price</string>
    <string name="title_location">Location</string>
...
