...
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4">


        <LinearLayout
            android:id="@+id/explore_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
...
                android:layout_marginTop="8dp"
                android:contentDescription="@string/text_content"

                app:srcCompat="@drawable/ic_tab_explore" />

            <TextView
                android:id="@+id/explore_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/title_menu_explore"
                android:textAppearance="@style/TextAppearance.Small.Regular"
...
