...

            android:layout_below="@id/toolbar">


            <FrameLayout

                android:id="@+id/frame_container"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/statusBarSizeMargin" />


...
